--- a/PocketTicket/Base.lproj/Main.storyboard
+++ b/PocketTicket/Base.lproj/Main.storyboard
@@ -1,26 +1,103 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1212" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Tab Bar Controller-->
+        <scene sceneID="jdp-af-n2P">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gEG-fe-AYK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tabBarController id="XuO-YC-UgC" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="Pzb-o3-88V">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="qyZ-fb-Sgp" kind="relationship" relationship="viewControllers" id="DQk-Oa-4Ub"/>
+                        <segue destination="SoR-ig-Cwx" kind="relationship" relationship="viewControllers" id="vSd-oE-sq7"/>
+                    </connections>
+                </tabBarController>
+            </objects>
+            <point key="canvasLocation" x="-3127" y="407"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="VSU-JF-iSa">
+            <objects>
+                <navigationController storyboardIdentifier="CalendarNavi" id="qyZ-fb-Sgp" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="TbG-KM-rYM"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="PtD-o1-Fdm">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="eCH-tr-kco" kind="relationship" relationship="rootViewController" id="Rjl-ca-2id"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aZE-qB-Bhc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2253" y="256"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="yP9-gq-USx">
+            <objects>
+                <viewController storyboardIdentifier="CalendarMain" id="eCH-tr-kco" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="Oxz-Xh-AGQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="Fpk-Q7-v3S"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="q0G-Lt-uWb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="4CT-oe-vx3"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jje-7g-16e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-1436" y="245"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="0Np-86-1qP">
+            <objects>
+                <navigationController id="SoR-ig-Cwx" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="ksL-PV-tBF"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="P8j-zB-u6g">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="edy-9g-rWi" kind="relationship" relationship="rootViewController" id="C8N-pc-TQO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="b2l-OQ-tze" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2254" y="971"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="jjP-Rk-mVe">
+            <objects>
+                <viewController id="edy-9g-rWi" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="SdE-FB-mHR"/>
+                        <viewControllerLayoutGuide type="bottom" id="DiA-s7-sy0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="dWx-1N-hY0">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="y80-tJ-Z8z"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lVw-fI-VUR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1440" y="966"/>
         </scene>
     </scenes>
 </document>
