--- a/PocketTicket/Base.lproj/Main.storyboard
+++ b/PocketTicket/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
         <!--Item-->
         <scene sceneID="VSU-JF-iSa">
             <objects>
-                <navigationController storyboardIdentifier="CalendarNavi" id="qyZ-fb-Sgp" sceneMemberID="viewController">
+                <navigationController id="qyZ-fb-Sgp" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="TbG-KM-rYM"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="PtD-o1-Fdm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -44,10 +44,10 @@
             </objects>
             <point key="canvasLocation" x="-2253" y="256"/>
         </scene>
-        <!--View Controller-->
+        <!--Cal Main View Controller-->
         <scene sceneID="yP9-gq-USx">
             <objects>
-                <viewController storyboardIdentifier="CalendarMain" id="eCH-tr-kco" sceneMemberID="viewController">
+                <viewController id="eCH-tr-kco" customClass="CalMainViewController" customModule="PocketTicket" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Oxz-Xh-AGQ"/>
                         <viewControllerLayoutGuide type="bottom" id="Fpk-Q7-v3S"/>
@@ -62,6 +62,78 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jje-7g-16e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1436" y="245"/>
+        </scene>
+        <!--Cal Add View Controller-->
+        <scene sceneID="UPs-1P-noe">
+            <objects>
+                <viewController id="Dzw-Cu-Avi" customClass="CalAddViewController" customModule="PocketTicket" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cQc-Bj-Y5J"/>
+                        <viewControllerLayoutGuide type="bottom" id="c4a-Wc-Oo8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8c0-3l-9Nd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QEU-Kt-77z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-697" y="-458"/>
+        </scene>
+        <!--Cal Review View Controller-->
+        <scene sceneID="0nn-Rp-ziF">
+            <objects>
+                <viewController id="Wlo-Bz-ZlO" customClass="CalReviewViewController" customModule="PocketTicket" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="259-dY-1Jn"/>
+                        <viewControllerLayoutGuide type="bottom" id="xld-HB-Can"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="f4X-Xy-b6Q">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2A8-EK-v78" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-33" y="-458"/>
+        </scene>
+        <!--Cal Daily View Controller-->
+        <scene sceneID="Y90-F3-OOl">
+            <objects>
+                <viewController id="koG-Qg-lWa" customClass="CalDailyViewController" customModule="PocketTicket" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yil-YA-yio"/>
+                        <viewControllerLayoutGuide type="bottom" id="xqy-qV-4ht"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="x5d-gg-Ncd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Bi-bd-IPi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-706" y="244"/>
+        </scene>
+        <!--Cal Detail View Controller-->
+        <scene sceneID="v9Z-T3-7RE">
+            <objects>
+                <viewController id="D52-64-aur" customClass="CalDetailViewController" customModule="PocketTicket" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bWG-eR-Y52"/>
+                        <viewControllerLayoutGuide type="bottom" id="FKP-0y-dAs"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="r5p-cf-iib">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BiZ-1K-wXM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-32" y="246"/>
         </scene>
         <!--Item-->
         <scene sceneID="0Np-86-1qP">
@@ -80,10 +152,10 @@
             </objects>
             <point key="canvasLocation" x="-2254" y="971"/>
         </scene>
-        <!--View Controller-->
+        <!--Tick Main View Controller-->
         <scene sceneID="jjP-Rk-mVe">
             <objects>
-                <viewController id="edy-9g-rWi" sceneMemberID="viewController">
+                <viewController id="edy-9g-rWi" customClass="TickMainViewController" customModule="PocketTicket" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="SdE-FB-mHR"/>
                         <viewControllerLayoutGuide type="bottom" id="DiA-s7-sy0"/>
@@ -98,6 +170,42 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lVw-fI-VUR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1440" y="966"/>
+        </scene>
+        <!--Tick Filter View Controller-->
+        <scene sceneID="l4W-Pp-fZi">
+            <objects>
+                <viewController id="Hp2-L2-pP1" customClass="TickFilterViewController" customModule="PocketTicket" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZoX-T3-FWO"/>
+                        <viewControllerLayoutGuide type="bottom" id="wIm-iU-dyv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="x4D-J6-3H1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4d0-ON-Z3o" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-670" y="953"/>
+        </scene>
+        <!--Photos View Controller-->
+        <scene sceneID="6DR-01-dJr">
+            <objects>
+                <viewController id="aDR-x1-zmB" customClass="PhotosViewController" customModule="PocketTicket" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0fh-se-eEr"/>
+                        <viewControllerLayoutGuide type="bottom" id="s7N-Hk-1Er"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ax7-zn-uay">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SBx-Xp-ayz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-4" y="963"/>
         </scene>
     </scenes>
 </document>
