--- a/PocketTicket/Base.lproj/Main.storyboard
+++ b/PocketTicket/Base.lproj/Main.storyboard
@@ -252,8 +252,8 @@
                                                     <state key="normal" image="seat"/>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Seat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jKi-gm-Rb3">
-                                                    <rect key="frame" x="53" y="11" width="35" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="53" y="13.5" width="36" height="16"/>
+                                                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -262,7 +262,7 @@
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="textColor"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="16"/>
                                                     <textInputTraits key="textInputTraits" spellCheckingType="no"/>
                                                 </textField>
                                             </subviews>
@@ -283,16 +283,16 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Actor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3y0-DJ-2jc">
-                                                    <rect key="frame" x="53" y="11" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="53" y="13.5" width="44.5" height="16"/>
+                                                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="출연진" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bCD-gX-eBU">
-                                                    <rect key="frame" x="110" y="6" width="265" height="30"/>
+                                                    <rect key="frame" x="112.5" y="6" width="262.5" height="30"/>
                                                     <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="textColor"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="16"/>
                                                     <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                                 </textField>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qFI-qN-VpZ" userLabel="ActorImage">
@@ -331,15 +331,15 @@
                                                     <state key="normal" image="calendar"/>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tOD-hh-m4f">
-                                                    <rect key="frame" x="53" y="11.5" width="36" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="53" y="14" width="37.5" height="16"/>
+                                                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="juZ-Xb-OQ0" userLabel="dateLabel">
-                                                    <rect key="frame" x="124" y="11" width="229" height="21"/>
+                                                    <rect key="frame" x="124" y="11" width="230" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="16"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -386,16 +386,16 @@
                                                     </constraints>
                                                     <state key="normal" image="alarm"/>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kHv-tQ-w2e" userLabel="alarmLabel">
-                                                    <rect key="frame" x="111" y="11" width="231" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alarm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qmf-8L-HRh">
+                                                    <rect key="frame" x="53" y="10" width="47" height="21"/>
+                                                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="16"/>
+                                                    <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alarm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qmf-8L-HRh">
-                                                    <rect key="frame" x="53" y="10" width="45" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kHv-tQ-w2e" userLabel="alarmLabel">
+                                                    <rect key="frame" x="108" y="11" width="248" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="15"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -509,16 +509,16 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fb7-dz-Db1" userLabel="genreLabel">
-                                                    <rect key="frame" x="122" y="12" width="231" height="21"/>
+                                                    <rect key="frame" x="117" y="12" width="236" height="21"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="231" id="mds-Gr-hLl"/>
+                                                        <constraint firstAttribute="width" constant="236" id="mds-Gr-hLl"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="16"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ikI-aj-mjb">
-                                                    <rect key="frame" x="53" y="12" width="55" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="53" y="14.5" width="56" height="16"/>
+                                                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -538,7 +538,7 @@
                                                 <constraint firstItem="roy-gj-xkm" firstAttribute="top" secondItem="LNB-kK-zFc" secondAttribute="topMargin" constant="4" id="h51-L1-oZL"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="fb7-dz-Db1" secondAttribute="trailing" constant="-19" id="hdK-M8-vaK"/>
                                                 <constraint firstItem="ikI-aj-mjb" firstAttribute="leading" secondItem="roy-gj-xkm" secondAttribute="trailing" constant="10" id="i04-5D-c1P"/>
-                                                <constraint firstItem="fb7-dz-Db1" firstAttribute="leading" secondItem="ikI-aj-mjb" secondAttribute="trailing" constant="14" id="mV4-wq-fxV"/>
+                                                <constraint firstItem="fb7-dz-Db1" firstAttribute="leading" secondItem="ikI-aj-mjb" secondAttribute="trailing" constant="8" id="mV4-wq-fxV"/>
                                                 <constraint firstItem="ikI-aj-mjb" firstAttribute="centerY" secondItem="LNB-kK-zFc" secondAttribute="centerY" id="rcs-Cs-Zj3"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -569,8 +569,8 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Theater" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k2k-aE-zuw">
-                                                    <rect key="frame" x="53" y="11" width="60" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="53" y="13.5" width="61.5" height="16"/>
+                                                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -582,11 +582,11 @@
                                                     <state key="normal" image="theater"/>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wNA-gh-1VI" userLabel="theaterLabel">
-                                                    <rect key="frame" x="144" y="12" width="212" height="21"/>
+                                                    <rect key="frame" x="125" y="12" width="217" height="21"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="212" id="7SP-8f-ank"/>
+                                                        <constraint firstAttribute="width" constant="217" id="7SP-8f-ank"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -594,7 +594,7 @@
                                                 <constraint firstItem="cOR-LF-abS" firstAttribute="top" secondItem="wNA-gh-1VI" secondAttribute="top" id="ALk-99-bAc"/>
                                                 <constraint firstItem="cOR-LF-abS" firstAttribute="centerY" secondItem="k2k-aE-zuw" secondAttribute="centerY" id="BYi-GR-x84"/>
                                                 <constraint firstItem="cOR-LF-abS" firstAttribute="centerY" secondItem="wNA-gh-1VI" secondAttribute="centerY" id="FgX-KO-7pO"/>
-                                                <constraint firstItem="wNA-gh-1VI" firstAttribute="leading" secondItem="k2k-aE-zuw" secondAttribute="trailing" constant="31" id="HvI-wo-Xig"/>
+                                                <constraint firstItem="wNA-gh-1VI" firstAttribute="leading" secondItem="k2k-aE-zuw" secondAttribute="trailing" constant="10.5" id="HvI-wo-Xig"/>
                                                 <constraint firstItem="cOR-LF-abS" firstAttribute="top" secondItem="eJW-Ha-3DN" secondAttribute="topMargin" constant="4" id="LGH-aN-0tw"/>
                                                 <constraint firstItem="k2k-aE-zuw" firstAttribute="centerY" secondItem="eJW-Ha-3DN" secondAttribute="centerY" id="Upq-kb-TTM"/>
                                                 <constraint firstItem="k2k-aE-zuw" firstAttribute="leading" secondItem="cOR-LF-abS" secondAttribute="trailing" constant="10" id="W6W-iX-1Cb"/>
