--- a/PocketTicket/Base.lproj/Main.storyboard
+++ b/PocketTicket/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
         <scene sceneID="VSU-JF-iSa">
             <objects>
                 <navigationController title="Calendar Navigation " id="qyZ-fb-Sgp" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Calendar" image="calendar_18" id="TbG-KM-rYM" userLabel="Calendar">
+                    <tabBarItem key="tabBarItem" title="Calendar" image="calendar-1" id="TbG-KM-rYM" userLabel="Calendar">
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="0.0"/>
                     </tabBarItem>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" translucent="NO" id="PtD-o1-Fdm">
@@ -391,7 +391,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="13" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kHv-tQ-w2e" userLabel="alarmLabel">
-                                                    <rect key="frame" x="122" y="11" width="220" height="21"/>
+                                                    <rect key="frame" x="125" y="11" width="220" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="15"/>
                                                     <nil key="highlightedColor"/>
@@ -984,6 +984,7 @@
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="00G-iJ-RC3"/>
                                 </items>
+                                <color key="tintColor" red="0.91263921209999999" green="0.27482460860000002" blue="0.30661270349999997" alpha="1" colorSpace="calibratedRGB"/>
                             </toolbar>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="xYU-9a-VW6">
                                 <rect key="frame" x="0.0" y="20" width="375" height="603"/>
@@ -1002,16 +1003,21 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WpL-dt-KTG">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="595"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </view>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bMk-rl-bz0">
-                                                    <rect key="frame" x="0.0" y="21" width="375" height="560"/>
+                                                    <rect key="frame" x="0.0" y="28" width="375" height="547"/>
                                                 </imageView>
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstItem="bMk-rl-bz0" firstAttribute="centerY" secondItem="iHp-ph-UMJ" secondAttribute="centerY" constant="-0.5" id="57a-xk-znx"/>
                                             <constraint firstItem="bMk-rl-bz0" firstAttribute="centerX" secondItem="iHp-ph-UMJ" secondAttribute="centerX" id="Acf-O2-Llf"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="bMk-rl-bz0" secondAttribute="bottom" constant="20" id="GMu-79-f7u"/>
+                                            <constraint firstItem="bMk-rl-bz0" firstAttribute="top" secondItem="iHp-ph-UMJ" secondAttribute="topMargin" constant="20" id="O5l-Ax-nCw"/>
                                             <constraint firstItem="bMk-rl-bz0" firstAttribute="width" secondItem="iHp-ph-UMJ" secondAttribute="width" id="ktE-n7-Mis"/>
-                                            <constraint firstItem="bMk-rl-bz0" firstAttribute="height" secondItem="iHp-ph-UMJ" secondAttribute="height" constant="-43" id="yrJ-1k-vgm"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="fullImageView" destination="bMk-rl-bz0" id="7E9-Wq-SoI"/>
@@ -1378,7 +1384,7 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="88432FCF-6E50-480A-824D-702C499225B2" translatesAutoresizingMaskIntoConstraints="NO" id="UQS-pT-lXJ">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="620781DC-9AD6-4A0A-B246-313673283145" translatesAutoresizingMaskIntoConstraints="NO" id="UQS-pT-lXJ">
                                                     <rect key="frame" x="10" y="0.0" width="83" height="95"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="83" id="y6K-ef-xPl"/>
@@ -1490,7 +1496,7 @@
         <scene sceneID="ERp-tZ-Gz4">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="g3o-IP-IQ7" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Ticket" image="ticket_18" id="Vvp-HR-7yz"/>
+                    <tabBarItem key="tabBarItem" title="Ticket" image="ticket" id="Vvp-HR-7yz"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" translucent="NO" id="cJS-na-JaK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -2062,7 +2068,7 @@
         <image name="3Wcheck" width="911" height="910"/>
         <image name="5D" width="911" height="910"/>
         <image name="5Dcheck" width="911" height="910"/>
-        <image name="88432FCF-6E50-480A-824D-702C499225B2" width="131" height="155">
+        <image name="620781DC-9AD6-4A0A-B246-313673283145" width="131" height="155">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -3472,13 +3478,13 @@ AAAAAAAABAEAAAAAAAAAQQAAAAAAAAAAAAAAAAABR5Q
         <image name="actor" width="128" height="128"/>
         <image name="alarm" width="128" height="128"/>
         <image name="calendar" width="128" height="128"/>
-        <image name="calendar_18" width="29" height="30"/>
+        <image name="calendar-1" width="34" height="34"/>
         <image name="findRoute_black" width="128" height="128"/>
         <image name="full" width="469" height="155"/>
         <image name="genre" width="128" height="128"/>
         <image name="review" width="128" height="128"/>
         <image name="seat" width="128" height="128"/>
         <image name="theater" width="128" height="128"/>
-        <image name="ticket_18" width="29" height="30"/>
+        <image name="ticket" width="34" height="34"/>
     </resources>
 </document>
